chore: bound Player and PlayerView positions